--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+# LISC Database klasörünü ignore et
+LISC Database/Ground Truth Segmentation
+LISC Database/Main Dataset
+LISC Database/More Dataset without Ground Truth
+LISC Database/read_me.txt
